Add support for Spring Boot